--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{enumitem} % For itemized list formatting
 \usepackage{hyperref} % For hyperlinks
 \usepackage{pgfplots}
+\usepackage{ gensymb }
 
 
 \title{Honors Econ}
@@ -337,5 +338,28 @@ But note that not every function is non-linear. But the key thing is we can line
 
     \end{minipage}
 \end{tabular}
-Note that in Graph 1, when we increase the number of goods X we need, we progressively need less Y. Conversely for Graph 2, when we need to increase the number of goods for X, we progressively need more and more good of Y. 
+Note that in Graph 1, when we increase the number of goods X we need, we progressively need less Y. Conversely for Graph 2, when we need to increase the number of goods for X, we progressively need more and more good of Y. Note that
+\[
+\frac{dy}{dx} = -\frac{p_x}{p_y}
+\]
+also measures the opportunity cost of the good, where it is a trade-off. Again, it is important to note that within each equation, there is a story to be told.
+\subsection{Things we did not cover in the lecture}
+Truth be told, I have no idea if Lima is going to cover this or not, but I thought it would be a good practice to at least look at this. 
+\subsubsection{Changes in parameters}
+The shape of the budget set depends on the price and income. In this section we will determine the effect that changing these parameters has on the consumer's budget set. In this, we focus on only one change because it will make things easier to analyze. \\
+
+
+For example, when income changes, the budget constraint shifts parallel to its previous position. Just think about it mathematically, if a consumer's income increases, then so does y intercept, thus shifting the line up. \\
+
+
+If we change the prices, we can notice that there are 2 main effects. Let's say that the price increases for good x from $p^{\degree}_{x}$ to $p'_x$ such that $p'_x > p^{\degree}_{x} $ which means that the inherent trade off changes for each good y and good x. Additionally, the maximum amount of goods does indeed change. Another thing to note is that the price ratio satisfies
+\[
+\frac{p'_x}{p_y} > \frac{p^{\degree}_{x}}{p_y}
+\]
+which numerically makes sense, but it also denotes the higher trade off between the consumption of goods, which then implies that the budget constraint after the change is steeper, both in the relative and absolute price. 
+\subsubsection{Policy Interventions}
+One of the main things that happened when we are required to derive the budget set is the idea that we have objects that we can get or not get. And thus, when we have these options, we have choices to spend our money. In this regard, there are different ways we can spend our money which means that our relative price becomes 1 for the exchange of money between different types of expenditures. \\
+
+
+When we want to study certain effects of different policies, we can group expenditures into 2 distinct groups: The group we are studying, and everything else. Refer to example in Lima's notes for the school system.\footnote{I'll probably write this later.}
 \end{document}
